1. Метод .of [#437126]